--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <button onclick="startGame()">Sesi Başlat</button>
 </div>
 
-<canvas id="game" width="360" height="640"></canvas>
+<canvas id="game"></canvas>
 
 <div id="choices">
     <button onclick="choose('left')">SOL</button>
