--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 <body>
 
 <div id="game">
-  <h1 id="title">Hatırlayan Dünya</h1>
-  <p id="text"></p>
+  <h1>Hatırlayan Dünya</h1>
+
+  <!-- BUNLAR ŞART -->
+  <p id="text">Yükleniyor...</p>
   <div id="choices"></div>
 </div>
 
